enum EstadoFoco{
    Encendido,
    Apagado

};