@startuml diagrama 
class Usuario
class Serie{
- Foco : Foquitos[10]
+ EncenderTodo()
+ EncenderCantidad(Numero)
+ ApagarTodo()
+ ApagarCantidad(Numero)
+ RecorrerIzquierda()
+ RecorrerDerecha()
+ AlternarEncendido()
+ Imprimir()
} 
class Foco{
- EstadoFoco : estado
+ Encender() 
+ Apagar()
+ Imprimir()
+ Alternar()
}
enum EstadoFoco{
Encendido 
Apagado
}
 Foco *-- EstadoFoco
Foco --o Usuario 
Serie "1" *-- "10" Foco
Usuario o-- Serie 
@enduml